# hammerhead_ros2

./: .gitignore  .gitmodules  README.md  clean.sh  compile.sh  generate_docs.sh  mkdocs.yml
config/: fastdds_shm.xml  fastdds_udp.xml
cpp/image_viewer/: CMakeLists.txt
cpp/obstacle_data_generator/: README.md
cpp/set_camera_params/: README.md
cpp/src/generate_rosbag2/: CMakeLists.txt  README.md
cpp/src/generate_rosbag2/include/generate_rosbag2/: get_files.hpp  point_filter.hpp
cpp/src/generate_rosbag2/src/: xyz.cpp
cpp/src/image_viewer/: CMakeLists.txt  image_viewer.cpp  package.xml
cpp/src/obstacle_data_generator/: package.xml
cpp/src/point_cloud_generator/: CMakeLists.txt  package.xml  point_cloud_generator.cpp
cpp/src/set_camera_params/: CMakeLists.txt  package.xml
cpp/src/toggle_recording/: package.xml
examples/cpp/generate_rosbag2/: CMakeLists.txt  README.md  package.xml
examples/cpp/generate_rosbag2/include/generate_rosbag2/: bag_writer.hpp  details.hpp  point_filter.hpp  safe_load.hpp  to_msg.hpp
examples/cpp/generate_rosbag2/src/: everything.cpp  xyz.cpp
examples/cpp/image_viewer/: CMakeLists.txt  README.md  image_viewer.cpp  package.xml
examples/cpp/obstacle_data_generator/: .gitignore  CMakeLists.txt  README.md  package.xml
examples/cpp/obstacle_data_recorder/: CMakeLists.txt  README.md  obstacle_data_recorder.cpp  package.xml
examples/cpp/point_cloud_generator/: CMakeLists.txt  README.md  package.xml  point_cloud_generator.cpp
examples/cpp/set_camera_params/: README.md  package.xml
examples/cpp/toggle_recording/: CMakeLists.txt  README.md  package.xml  toggle_recording.cpp
examples/cpp/topbot_publisher/: CMakeLists.txt  README.md  package.xml  topbot_publisher.cpp
examples/python/generate_rosbag2_py/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
examples/python/generate_rosbag2_py/generate_rosbag2_py/: bag_writer.py  details.py  details_parameters.py  everything.py  to_image_msg.py  to_point_cloud_msg.py  xyz.py
examples/python/image_viewer_py/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
examples/python/image_viewer_py/image_viewer_py/: image_viewer_py.py
examples/python/obstacle_data_generator_py/: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.cfg  setup.py
examples/python/obstacle_data_generator_py/obstacle_data_generator_py/: obstacle_data_generator_py.py
examples/python/obstacle_data_recorder_py/: setup.py
examples/python/point_cloud_generator_py/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
examples/python/point_cloud_generator_py/point_cloud_generator_py/: point_cloud_generator_py.py
examples/python/set_camera_params_py/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
examples/python/set_camera_params_py/set_camera_params_py/: set_camera_params_py.py
examples/python/toggle_recording_py/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
examples/python/toggle_recording_py/toggle_recording_py/: toggle_recording_py.py
examples/python/topbot_publisher/: README.md  package.xml  setup.cfg  setup.py
examples/python/topbot_publisher/topbot_publisher/: topbot_publisher.py
examples/python/topbot_publisher_py/: README.md  package.xml  setup.cfg  setup.py
examples/python/topbot_publisher_py/topbot_publisher_py/: topbot_publisher_py.py
hammerhead_msgs/: CMakeLists.txt  README.md  package.xml
hammerhead_msgs/msg/: Obstacle.msg  PointCloudSoup.msg
python/generate_rosbag2_py/: package.xml  setup.py
python/generate_rosbag2_py/generate_rosbag2_py/: bag_writer.py  details.py  everything.py  safe_load.py  to_point_cloud_msg.py  xyz.py
python/image_viewer_py/: README.md  package.xml  setup.py
python/image_viewer_py/image_viewer_py/: image_viewer_py.py
python/obstacle_data_generator_py/: package.xml  setup.py
python/obstacle_data_generator_py/obstacle_data_generator_py/: obstacle_data_generator_py.py
python/point_cloud_generator_py/: README.md  package.xml  setup.py
python/point_cloud_generator_py/point_cloud_generator_py/: point_cloud_generator_py.py
python/set_camera_params_py/: package.xml  setup.py
python/set_camera_params_py/set_camera_params_py/: set_camera_params_py.py
python/toggle_recording_py/: package.xml  setup.py
python/toggle_recording_py/toggle_recording_py/: toggle_recording_py.py
src/generate_rosbag2/: CMakeLists.txt  README.md  package.xml
src/generate_rosbag2/include/generate_rosbag2/: bag_writer.hpp  to_msg.hpp
src/generate_rosbag2/src/: everything.cpp  xyz.cpp
src/hammerhead_msgs/: README.md  package.xml
src/image_viewer/: image_viewer.cpp  package.xml
src/obstacle_data_generator/: CMakeLists.txt  obstacle_data_generator.cpp  package.xml
src/point_cloud_generator/: README.md  package.xml
src/set_camera_params/: package.xml  set_camera_params.cpp
src/toggle_recording/: CMakeLists.txt  README.md  package.xml  toggle_recording.cpp
utils/: laz_to_ros2_bag.py
