<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>toggle_recording</name>
    <version>0.0.0</version>
    <description>This example demonstrates how to stop/start the recording in realtime by using the ROS2 interface for
        hammerhead.
    </description>
    <maintainer email="support@nodarsensor.com">nodar</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>std_srvs</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
