<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>generate_rosbag2</name>
    <version>0.0.0</version>
    <description>This package converts the data recorded by hammerhead into a ROS2 bag.</description>
    <maintainer email="support@nodarsensor.com">nodar</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>rosbag2_cpp</depend>
    <depend>rosbag2_storage</depend>
    <depend>sensor_msgs</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
