<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>obstacle_data_generator</name>
    <version>0.0.0</version>
    <description>This example demonstrates how to subscribe to ObstacleData messages, and save that data in .txt
        files.
    </description>
    <maintainer email="support@nodarsensor.com">Nodar</maintainer>
    <license>NODAR Limited Copyright License</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>hammerhead_msgs</depend>
    <depend>rclcpp</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
