<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>generate_rosbag2_py</name>
    <version>0.0.0</version>
    <description>This package converts the data recorded by hammerhead into a ROS2 bag.</description>
    <maintainer email="support@nodarsensor.com">Nodar</maintainer>
    <license>NODAR Limited Copyright License</license>

    <buildtool_depend>ament_python</buildtool_depend>

    <depend>rclpy</depend>
    <depend>rosbag2_py</depend>
    <depend>sensor_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>opencv2</depend>
    <depend>tqdm</depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
