<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>image_viewer_py</name>
    <version>0.0.0</version>
    <description>This example is a simple OpenCV viewer for ROS2 images published by hammerhead.</description>
    <maintainer email="support@nodarsensor.com">Nodar</maintainer>
    <license>NODAR Limited Copyright License</license>

    <buildtool_depend>ament_python</buildtool_depend>

    <depend>rclpy</depend>
    <depend>sensor_msgs</depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
