<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>point_cloud_generator_py</name>
    <version>0.0.0</version>
    <description>This example demonstrates how to subscribe to PointCloudSoup messages, generate downsampled PointCloud2
        instances, and then publish the downsampled point clouds.
    </description>
    <maintainer email="support@nodarsensor.com">nodar</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>ament_python</buildtool_depend>

    <depend>hammerhead_msgs</depend>
    <depend>rclpy</depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
