<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>toggle_recording_py</name>
    <version>0.0.0</version>
    <description>This example demonstrates how to stop/start the recording in realtime by using the ROS2 interface for
        hammerhead.
    </description>
    <maintainer email="support@nodarsensor.com">Nodar</maintainer>
    <license>NODAR Limited Copyright License</license>

    <buildtool_depend>ament_python</buildtool_depend>

    <depend>rclpy</depend>
    <depend>std_srvs</depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
