<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>topbot_publisher</name>
    <version>0.0.0</version>
    <description>Publish vertically stacked stereo images from disk to Hammerhead over ROS2.</description>
    <maintainer email="support@nodarsensor.com">Nodar</maintainer>
    <license>NODAR Limited Copyright License</license>

    <buildtool_depend>ament_python</buildtool_depend>

    <depend>rclpy</depend>
    <depend>sensor_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>opencv2</depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
